# sdk-nrf

./: CODEOWNERS  rom_report.txt
.github/: test-spec.yml
doc/nrf/releases_and_maturity/: known_issues.rst
samples/bluetooth/conn_time_sync/: CMakeLists.txt  prj.conf  sample.yaml
samples/bluetooth/conn_time_sync/boards/: nrf54h20dk_nrf54h20_cpuapp.conf  nrf54h20dk_nrf54h20_cpuapp.overlay  nrf54h20dk_nrf54h20_cpurad.overlay
samples/bluetooth/conn_time_sync/src/: controller_time_nrf54h.c  timed_led_toggle.c
samples/bluetooth/mesh/common/mcuboot/: prj.conf
samples/bluetooth/mesh/common/mcuboot/boards/: thingy53_nrf5340_cpuapp.conf
samples/bluetooth/mesh/light/: CMakeLists.txt
samples/bluetooth/peripheral_uart/boards/: nrf54h20dk_nrf54h20_cpurad.overlay
scripts/ci/: tags.yaml
subsys/bluetooth/controller/: hci_internal.c  hci_internal_wrappers.c
subsys/mpsl/init/: mpsl_init.c
subsys/mpsl/pm/: mpsl_pm_utils.c
tests/host_kpi/rom_kpi/: check_rom_size.py  rom_thresholds.yaml
tests/rom_kpi/: CMakeLists.txt  check_rom_size.py  influxdb_pusher.py  main.c  prj.conf  rom_thresholds.yaml  test_rom_kpi.py  testcase.yaml
